--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".intro.OnBoardingActivity" android:theme="@style/OnBoardTheme" />
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".intro.OnBoardingActivity"
+            android:theme="@style/OnBoardTheme" />
         <activity android:name=".MainActivity" />
         <activity
             android:name=".intro.SplashActivity"
