--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".intro.NoticeActivity" android:theme="@style/OnBoardTheme" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".view.RegisterActivity" />
+        <activity android:name=".view.LoginActivity" />
         <activity
             android:name=".intro.OnBoardingActivity"
             android:theme="@style/OnBoardTheme" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".view.MainActivity" />
         <activity
             android:name=".intro.SplashActivity"
             android:theme="@style/SplashTheme">
