--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".intro.NoticeActivity" android:theme="@style/OnBoardTheme" />
+        <activity android:name=".view.misc.OTPActivity"></activity>
+        <activity
+            android:name=".intro.NoticeActivity"
+            android:theme="@style/OnBoardTheme" />
         <activity android:name=".view.RegisterActivity" />
         <activity android:name=".view.LoginActivity" />
         <activity
