--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.RegistrationFormActivity"></activity>
+        <activity
+            android:name=".view.RegistrationFormActivity"
+            android:theme="@style/AppThemeWithActionBar" />
         <activity android:name=".view.misc.OTPActivity" />
         <activity
             android:name=".intro.NoticeActivity"
@@ -38,7 +40,6 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
