--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.CameraActivity"></activity>
-        <activity
-            android:name=".view.RegistrationFormActivity" />
+        <activity android:name=".view.misc.ForgotPasswordActivity"></activity>
+        <activity android:name=".view.CameraActivity" />
+        <activity android:name=".view.RegistrationFormActivity" />
         <activity android:name=".view.misc.OTPActivity" />
         <activity
             android:name=".intro.NoticeActivity"
