--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".setting.SettingAccountActivity" />
-        <activity android:name=".setting.ChangePasswordActivity" />
-        <activity android:name=".setting.SettingActivity" />
+        <activity android:name=".view.setting.SettingAccountActivity" />
+        <activity android:name=".view.setting.ChangePasswordActivity" />
+        <activity android:name=".view.setting.SettingActivity" />
         <activity android:name=".view.misc.ForgotPasswordActivity" />
         <activity android:name=".view.CameraActivity" />
         <activity android:name=".view.RegistrationFormActivity" />
