--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     //Stepper
     implementation 'com.stepstone.stepper:material-stepper:4.3.1'
     implementation 'net.opacapp:multiline-collapsingtoolbar:27.1.1'
+    implementation 'com.karumi:dexter:6.1.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
