--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,12 @@ android {
 }
 
 def butterKnifeVersion = '10.1.0'
+def lottieVersion = '3.0.3'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.airbnb.android:lottie:3.0.3'
+    implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
