--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ android {
 }
 
 def butterKnifeVersion = '10.1.0'
-def lottieVersion = '3.0.3'
+def lottieVersion = '3.4.0'
+def navigationVersion = '2.2.2'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -37,8 +38,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.navigation:navigation-fragment:2.2.1'
-    implementation 'androidx.navigation:navigation-ui:2.2.1'
+    implementation "androidx.navigation:navigation-fragment:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui:$navigationVersion"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.volley:volley:1.1.1'
@@ -61,6 +62,8 @@ dependencies {
     implementation 'com.stepstone.stepper:material-stepper:4.3.1'
     implementation 'net.opacapp:multiline-collapsingtoolbar:27.1.1'
     implementation 'com.karumi:dexter:6.1.0'
+    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
+
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
