--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'http://dl.bintray.com/amulyakhare/maven'
-        }
-        
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
@@ -21,6 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
