--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,19 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    dataBinding.enabled = true
+    dataBinding {
+        enabled = true
+    }
 }
 
 def butterKnifeVersion = '10.1.0'
 def lottieVersion = '3.4.0'
 def navigationVersion = '2.2.2'
+def retrofitVersion = '2.3.0'
+def glideVersion = '4.11.0'
+def rxJavaVersion = '2.1.1'
+def rxAndroidVersion = '2.1.1'
+def rxCallAdapterVersion = '2.5.0'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -38,16 +45,29 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+
     implementation "androidx.navigation:navigation-fragment:$navigationVersion"
     implementation "androidx.navigation:navigation-ui:$navigationVersion"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.volley:volley:1.1.1'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.loopj.android:android-async-http:1.4.10'
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation 'me.dm7.barcodescanner:zxing:1.9'
-    annotationProcessor "com.jakewharton:butterknife:$butterKnifeVersion"
+
+    implementation "com.jakewharton:butterknife:$butterKnifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
+
+    //rxJava
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$rxCallAdapterVersion"
 
     //Firebase
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
