--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,23 +29,18 @@ android {
     }
 }
 
-def butterKnifeVersion = '10.1.0'
-def lottieVersion = '3.4.0'
-def navigationVersion = '2.2.2'
-def retrofitVersion = '2.6.0'
-def glideVersion = '4.11.0'
-def rxJavaVersion = '2.1.1'
-def rxAndroidVersion = '2.1.1'
-def rxCallAdapterVersion = '2.5.0'
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    def lottieVersion = '3.4.0'
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
+    def navigationVersion = '2.2.2'
     implementation "androidx.navigation:navigation-fragment:$navigationVersion"
     implementation "androidx.navigation:navigation-ui:$navigationVersion"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -54,39 +49,28 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.loopj.android:android-async-http:1.4.10'
 
+    def retrofitVersion = '2.6.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
+    def glideVersion = '4.11.0'
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation 'me.dm7.barcodescanner:zxing:1.9'
 
+    def butterKnifeVersion = '10.1.0'
     implementation "com.jakewharton:butterknife:$butterKnifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
-
-    //rxJava
-    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$rxCallAdapterVersion"
-
-    //Firebase
-    implementation 'com.google.firebase:firebase-analytics:17.4.2'
-    implementation 'com.google.firebase:firebase-messaging:20.2.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
-    implementation 'com.google.firebase:firebase-database:19.3.0'
-    implementation 'com.google.firebase:firebase-storage:19.1.1'
-    implementation 'com.google.firebase:firebase-config:19.1.4'
-    implementation 'com.google.firebase:firebase-invites:17.0.0'
 
     //Stepper
     implementation 'com.stepstone.stepper:material-stepper:4.3.1'
     implementation 'net.opacapp:multiline-collapsingtoolbar:27.1.1'
     implementation 'com.karumi:dexter:6.1.0'
-    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
 }
