--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'androidx.navigation.safeargs'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.3"
+
     defaultConfig {
         applicationId "byc.avt.avanteeborrower"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,13 +41,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
-    def navigationVersion = '2.2.2'
+    def navigationVersion = '2.3.5'
     implementation "androidx.navigation:navigation-fragment:$navigationVersion"
     implementation "androidx.navigation:navigation-ui:$navigationVersion"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.loopj.android:android-async-http:1.4.10'
 
     def retrofitVersion = '2.6.0'
@@ -57,6 +58,8 @@ dependencies {
     def glideVersion = '4.11.0'
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'org.jsoup:jsoup:1.8.3'
+    implementation 'com.whiteelephant:monthandyearpicker:1.3.0'
 
     def butterKnifeVersion = '10.1.0'
     implementation "com.jakewharton:butterknife:$butterKnifeVersion"
@@ -66,6 +69,7 @@ dependencies {
     implementation 'com.stepstone.stepper:material-stepper:4.3.1'
     implementation 'net.opacapp:multiline-collapsingtoolbar:27.1.1'
     implementation 'com.karumi:dexter:6.1.0'
+    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
@@ -73,4 +77,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
+
+    implementation 'com.github.heremaps:oksse:0.9.0'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 }
