--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "byc.avt.avanteeborrower"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -32,13 +32,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
 
     def lottieVersion = '3.4.0'
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
-    implementation 'com.google.android.material:material:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
     def navigationVersion = '2.3.5'
@@ -50,10 +50,10 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.loopj.android:android-async-http:1.4.10'
 
-    def retrofitVersion = '2.6.0'
+    def retrofitVersion = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3'
 
     def glideVersion = '4.11.0'
     implementation "com.github.bumptech.glide:glide:$glideVersion"
@@ -68,13 +68,14 @@ dependencies {
     //Stepper
     implementation 'com.stepstone.stepper:material-stepper:4.3.1'
     implementation 'net.opacapp:multiline-collapsingtoolbar:27.1.1'
-    implementation 'com.karumi:dexter:6.1.0'
+    implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
 
