--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <dist:module dist:instant="true" />
 
     <permission
-        android:name="byc.avt.avanteelender.permission.C2D_MESSAGE"
+        android:name="byc.avt.avanteeborrower.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -42,20 +42,21 @@
         <activity android:name=".view.setting.SettingActivity" />
         <activity android:name=".view.auth.forgotPassword.ForgotPasswordActivity" />
         <activity android:name=".camera.CameraActivity" />
-        <activity android:name=".view.registration.RegistrationFormActivity" />
+        <activity android:name=".view.registration.RegistrationFormActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <activity android:name=".view.misc.OTPActivity" />
-        <activity
-            android:name=".view.misc.NoticeActivity"
-            android:theme="@style/OnBoardTheme" />
+        <activity android:name=".view.misc.NoticeActivity" />
         <activity android:name=".view.auth.register.RegisterActivity" />
         <activity android:name=".view.auth.login.LoginActivity" />
-        <activity
-            android:name=".view.onboarding.OnBoardingActivity"
-            android:theme="@style/OnBoardTheme" />
+        <activity android:name=".view.onboarding.OnBoardingActivity" />
         <activity android:name=".view.main.MainActivity" />
+
         <activity
             android:name=".view.misc.SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -63,11 +64,6 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".helper.receiver.OTPReceiver">
-            <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
