--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
     package="byc.avt.avanteeborrower"
     tools:ignore="GoogleAppIndexingWarning">
 
@@ -36,13 +36,31 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".view.setting.SettingAccountActivity" />
-        <activity android:name=".view.setting.ChangePasswordActivity" />
-        <activity android:name=".view.setting.SettingActivity" />
+        <activity
+            android:name=".view.settings.account.EssentialDocumentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.settings.account.BankInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.settings.account.FamilyInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.settings.account.AddressesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.settings.account.WorkInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.settings.account.PersonalDataActivity"
+            android:exported="false" />
+        <activity android:name=".view.settings.account.SettingAccountActivity" />
+        <activity android:name=".view.settings.account.ChangePasswordActivity" />
+        <activity android:name=".view.settings.general.SettingActivity" />
         <activity android:name=".view.auth.forgotPassword.ForgotPasswordActivity" />
         <activity android:name=".camera.CameraActivity" />
-        <activity android:name=".view.registration.RegistrationFormActivity"
+        <activity
+            android:name=".view.registration.RegistrationFormActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity android:name=".view.misc.OTPActivity" />
@@ -51,7 +69,6 @@
         <activity android:name=".view.auth.login.LoginActivity" />
         <activity android:name=".view.onboarding.OnBoardingActivity" />
         <activity android:name=".view.main.MainActivity" />
-
         <activity
             android:name=".view.misc.SplashActivity"
             android:screenOrientation="portrait"
@@ -63,7 +80,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
